<resources>
    <string name="app_name">personaBaseDatos</string>
    <string name="titulo">REGISTRAR</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="pasatiempos">Pasa Tiempos</string>
    <string name="bailar">Bailar</string>
    <string name="programar">Programar</string>
    <string name="leer">Leer</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="limpiar">Limpiar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="buscar">Buscar</string>
    <string name="no">No.</string>
    <string name="registrar">Registrar</string>
    <string name="listado_en_tabla">Listado en tabla</string>
    <string name="listado">Listado</string>
    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/listado_en_tabla</item>
        <item>@string/listado</item>
    </string-array>
</resources>
