<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.personabasedatos.registar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtCedula"
                android:layout_weight="1"
                android:hint="@string/cedula" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBuscar"
                android:layout_weight="1"
                android:text="@string/buscar"
                android:onClick="buscar" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre"
            android:hint="@string/nombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellido"
            android:hint="@string/apellido" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:text="@string/masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdMasculino"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdFemenino"
                    android:layout_weight="1" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:text="@string/pasatiempos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp" />

        <CheckBox
            android:text="@string/programar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkProgramar" />

        <CheckBox
            android:text="@string/leer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkLeer" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkBailar"
            android:text="@string/bailar" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnagregar"
                android:layout_weight="1"
                android:text="@string/agregar"
                android:onClick="guardar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnModificar"
                android:layout_weight="1"
                android:text="@string/modificar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEliminar"
                android:layout_weight="1"
                android:text="@string/eliminar"
                android:onClick="eliminar" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLimpiar"
                android:layout_weight="1"
                android:text="@string/limpiar"
                android:onClick="limpiar" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
