<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_listado_tabla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.personabasedatos.listadoTabla">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:stretchColumns="*"
                        android:id="@+id/tblPersonas">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <TextView
                                android:text="@string/no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView10"
                                android:textStyle="normal|bold"
                                android:textSize="18sp" />

                            <TextView
                                android:text="@string/cedula"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView9"
                                android:textStyle="normal|bold"
                                android:textSize="18sp" />

                            <TextView
                                android:text="@string/nombre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView8"
                                android:textStyle="normal|bold"
                                android:textSize="18sp" />

                            <TextView
                                android:text="@string/sexo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView7"
                                android:textSize="18sp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:text="@string/pasatiempos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textView4"
                                android:textStyle="normal|bold"
                                android:textSize="18sp" />
                        </TableRow>

                    </TableLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
